--- a/contact.html
+++ b/contact.html
@@ -12,7 +12,7 @@
             <ul>
                 <li><a href="home.html">Home</a></li>
                 <li><a href="gallery.html">Gallery</a></li>
-                <li><a href="location.html">Loaction</a></li>
+                <li><a href="location.html">Location</a></li>
                 <li><a href="contact.html">Contact Us</a></li>
             </ul>
         </nav>
@@ -23,5 +23,42 @@
                 Wine Country.
             </p>
         </header>
+    
+        <form>
+            <div>
+                <label for="name"> Full Name:</label>
+                <input
+					type="text"
+					id="name"
+					name="fullName"
+					maxlength="20"
+					placeholder="Please enter your full name"
+					required
+				/>
+            <div>
+            <div>
+                <label for="email">Email: </label>
+                <input type="email" id="email" required name="email" />
+            </div>
+            <div>
+                <label for="phone">Phone Number:</label>
+			<input
+				type="tel"
+				id="phone"
+				pattern="[0-9]{10}"
+			/>
+            </div>
+            <div>
+                <label for="comment">Enquiry:</label>
+                <textarea
+				id=comment
+                placeholder="Comment"
+				rows="5"
+				cols="40"
+				required
+			></textarea>
+            </div>
+            </form>
+          
     </body>
 </html>
