--- a/home.html
+++ b/home.html
@@ -13,7 +13,7 @@
             <ul>
                 <li><a href="home.html">Home</a></li>
                 <li><a href="gallery.html">Gallery</a></li>
-                <li><a href="location.html">Loaction</a></li>
+                <li><a href="location.html">Location</a></li>
                 <li><a href="contact.html">Contact Us</a></li>
             </ul>
         </nav>
