Home page grid edits

--- a/home.html
+++ b/home.html
@@ -28,6 +28,7 @@
         <main>
             <div class="home-grid">
                 <div class="grid-title"><h2>Award Winning Gardens</h2></div>
+
                 <div class="grid-txt1">
                     <p>
                         Soak up nature at its most stunning at Hunter Valley
@@ -66,9 +67,11 @@
                     />
                 </div>
                 <div class="grid-txt3">
-                    The 10 individually themed gardens showcase the artistry of
-                    gardens around the world and use both native and exotic
-                    varieties of plants.
+                    <p>
+                        The 10 individually themed gardens showcase the artistry
+                        of gardens around the world and use both native and
+                        exotic varieties of plants.
+                    </p>
                 </div>
             </div>
         </main>
