added header to grid

--- a/home.html
+++ b/home.html
@@ -17,17 +17,16 @@
                 <li><a href="contact.html">Contact Us</a></li>
             </ul>
         </nav>
-        <header>
-            <h1>Hunter Valley Gardens</h1>
-            <p>
-                A naturally beautiful experience in the heart of Hunter Valley
-                Wine Country.
-            </p>
-        </header>
 
         <main>
             <div class="home-grid">
-                <div class="grid-title"><h2>Award Winning Gardens</h2></div>
+                <div class="grid-title">
+                    <h1>Hunter Valley Gardens</h1>
+                    <p>
+                        A naturally beautiful experience in the heart of Hunter
+                        Valley Wine Country.
+                    </p>
+                </div>
 
                 <div class="grid-txt1">
                     <p>
