--- a/contact.html
+++ b/contact.html
@@ -5,11 +5,11 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Hunter Valley Gardens Tourism Page</title>
-        <link rel="stylesheet" href="styles.css" />
+        <link rel="stylesheet" href="teststyles.css" />
     </head>
     <body>
         <nav>
-            <ul>
+            <ul class="mainNav">
                 <li><a href="home.html">Home</a></li>
                 <li><a href="gallery.html">Gallery</a></li>
                 <li><a href="location.html">Location</a></li>
