--- a/gallery.html
+++ b/gallery.html
@@ -16,12 +16,26 @@
                 <li><a href="contact.html">Contact Us</a></li>
             </ul>
         </nav>
-        <header>
+        <header class="header_pagetitle">
             <h1>Gallery - Hunter Valley Gardens</h1>
             <p>
                 A naturally beautiful experience in the heart of Hunter Valley
                 Wine Country.
             </p>
         </header>
+        <main class="maingallery">
+            <div class="gallery">
+                <img src="storybook-garden-03-min.jpg" alt="storybook-garden" />
+
+                <img src="rose-garden-02-min.jpg" alr="rose-garden" />
+                <img src="italian-grotto-06-min (1).jpg" alt="Italian-garden" />
+                <img src="chinese-garden-02-min.jpg" alt="Chinese-garden" />
+                <img src="sunken-garden-01-min.jpg" alt="Suken-garden" />
+                <img src="border-garden-07-min.jpg" alt="Border-garden" />
+                <img src="oriental-garden-02-min.jpg" alt="Orient-garden" />
+                <img src="indian-garden-09.jpg" alt="India-garden" />
+                <img src="lakes-walk-05-min (1).jpg" alt="Lake-walks" />
+            </div>
+        </main>
     </body>
 </html>
