bem_button_form_footer_partial

--- a/contact.html
+++ b/contact.html
@@ -22,6 +22,7 @@
                 A naturally beautiful experience in the heart of Hunter Valley
                 Wine Country.
             </p>
+            <img class="contactimage" src="indian-garden-09.jpg" />
         </header>
         <br />
         <main class="main-form">
@@ -53,13 +54,13 @@
                     cols="40"
                     required
                 ></textarea>
-                <input type="reset" />
-                <input type="submit" />
+                <input class="button" type="reset" />
+                <input class="button" type="submit" />
             </form>
         </main>
         <br />
-        <footer>
-            <div id="footer">
+        <footer class="pageFooter">
+            <div class="thefooter">
                 <p>E:eeid1@woolworths.com.au</p>
                 <p>G:git@github.com:Leid111/TourismProjectLizGarden.git</p>
             </div>
