--- a/gallery.html
+++ b/gallery.html
@@ -37,5 +37,11 @@
                 <img src="lakes-walk-05-min (1).jpg" alt="Lake-walks" />
             </div>
         </main>
+        <footer class="pageFooter">
+            <div class="thefooter">
+                <p>E:eeid1@woolworths.com.au</p>
+                <p>G:git@github.com:Leid111/TourismProjectLizGarden.git</p>
+            </div>
+        </footer>
     </body>
 </html>
