--- a/location.html
+++ b/location.html
@@ -19,24 +19,24 @@
 
         <main>
             <div class="home-grid">
-                <div class="grid-title">
+                <div class="home-grid__title">
                     <h1>Hunter Valley Gardens</h1>
                     <p>Where to find us</p>
                 </div>
-                <div class="grid-txt1">
+                <div class="home-grid__txt1">
                     <p>
                         Opening Hours: The gardens are open 7 days a week from
                         9am – 4:30pm
                     </p>
                 </div>
-                <div class="grid-img1">
+                <div class="home-grid__img1">
                     <img
                         class="images"
                         src="sunken-garden-02-min-1.jpg"
                         alt="GardenImage1"
                     />
                 </div>
-                <div class="grid-img2">
+                <div class="home-grid__img2">
                     <iframe
                         src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3354.6779508524137!2d151.291155615182!3d-32.7742788809728!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6b0cca923c83f175%3A0xa3b53d1042afed70!2sHunter%20Valley%20Gardens!5e0!3m2!1sen!2sau!4v1649623603746!5m2!1sen!2sau"
                         allowfullscreen=""
@@ -44,7 +44,7 @@
                         referrerpolicy="no-referrer-when-downgrade"
                     ></iframe>
                 </div>
-                <div class="grid-txt2">
+                <div class="home-grid__txt2">
                     <p>
                         An easy 2-hour drive North of Sydney via the M1, turning
                         off at the Cessnock/Vineyards Exit, following the signs
@@ -53,14 +53,14 @@
                         Gardens.
                     </p>
                 </div>
-                <div class="grid-img3">
+                <div class="home-grid__img3">
                     <img
                         class="images"
                         src="italian-grotto-06-min.jpg"
                         alt="GardenImage3"
                     />
                 </div>
-                <div class="grid-txt3">
+                <div class="home-grid__txt3">
                     <p>
                         Plan your day at the beautiful Hunter Valley Gardens
                         using the
@@ -72,5 +72,11 @@
                 </div>
             </div>
         </main>
+        <footer class="pageFooter">
+            <div class="thefooter">
+                <p>E:eeid1@woolworths.com.au</p>
+                <p>G:git@github.com:Leid111/TourismProjectLizGarden.git</p>
+            </div>
+        </footer>
     </body>
 </html>
