--- a/location.html
+++ b/location.html
@@ -73,7 +73,7 @@
             </div>
         </main>
         <footer class="pageFooter">
-            <div class="thefooter">
+            <div class="pageFooter__content">
                 <p>E:eeid1@woolworths.com.au</p>
                 <p>G:git@github.com:Leid111/TourismProjectLizGarden.git</p>
             </div>
