loactions MQ adjusted

--- a/location.html
+++ b/location.html
@@ -12,7 +12,7 @@
             <ul class="mainNav">
                 <li><a href="home.html">Home</a></li>
                 <li><a href="gallery.html">Gallery</a></li>
-                <li><a href="location.html">Loaction</a></li>
+                <li><a href="location.html">Location</a></li>
                 <li><a href="contact.html">Contact Us</a></li>
             </ul>
         </nav>
@@ -55,6 +55,7 @@
                 </div>
                 <div class="home-grid__img3">
                     <img
+                        id="Italian"
                         class="images"
                         src="italian-grotto-06-min.jpg"
                         alt="GardenImage3"
