--- a/contact.html
+++ b/contact.html
@@ -10,10 +10,34 @@
     <body>
         <nav>
             <ul class="mainNav">
-                <li><a href="home.html">Home</a></li>
-                <li><a href="gallery.html">Gallery</a></li>
-                <li><a href="location.html">Location</a></li>
-                <li><a href="contact.html">Contact Us</a></li>
+                <li>
+                    <a
+                        class="mainNav__links mainNav__links--highlighted"
+                        href="home.html"
+                        >Home</a
+                    >
+                </li>
+                <li>
+                    <a
+                        class="mainNav__links mainNav__links--highlighted"
+                        href="gallery.html"
+                        >Gallery</a
+                    >
+                </li>
+                <li>
+                    <a
+                        class="mainNav__links mainNav__links--highlighted"
+                        href="location.html"
+                        >Location</a
+                    >
+                </li>
+                <li>
+                    <a
+                        class="mainNav__links mainNav__links--highlighted"
+                        href="contact.html"
+                        >Contact Us</a
+                    >
+                </li>
             </ul>
         </nav>
         <header class="header_pagetitle">
