fixed nav and small v of MQ gallery

--- a/gallery.html
+++ b/gallery.html
@@ -10,10 +10,34 @@
     <body>
         <nav>
             <ul class="mainNav">
-                <li><a href="home.html">Home</a></li>
-                <li><a href="gallery.html">Gallery</a></li>
-                <li><a href="location.html">Location</a></li>
-                <li><a href="contact.html">Contact Us</a></li>
+                <li>
+                    <a
+                        class="mainNav__links mainNav__links--highlighted"
+                        href="home.html"
+                        >Home</a
+                    >
+                </li>
+                <li>
+                    <a
+                        class="mainNav__links mainNav__links--highlighted"
+                        href="gallery.html"
+                        >Gallery</a
+                    >
+                </li>
+                <li>
+                    <a
+                        class="mainNav__links mainNav__links--highlighted"
+                        href="location.html"
+                        >Location</a
+                    >
+                </li>
+                <li>
+                    <a
+                        class="mainNav__links mainNav__links--highlighted"
+                        href="contact.html"
+                        >Contact Us</a
+                    >
+                </li>
             </ul>
         </nav>
         <header class="header_pagetitle">
@@ -23,18 +47,54 @@
                 Wine Country.
             </p>
         </header>
-        <main class="maingallery">
+        <main class="container">
             <div class="gallery">
-                <img src="storybook-garden-03-min.jpg" alt="storybook-garden" />
+                <img
+                    class="gallery__img gallery__img--hover"
+                    src="storybook-garden-03-min.jpg"
+                    alt="storybook-garden"
+                />
 
-                <img src="rose-garden-02-min.jpg" alr="rose-garden" />
-                <img src="italian-grotto-06-min (1).jpg" alt="Italian-garden" />
-                <img src="chinese-garden-02-min.jpg" alt="Chinese-garden" />
-                <img src="sunken-garden-01-min.jpg" alt="Suken-garden" />
-                <img src="border-garden-07-min.jpg" alt="Border-garden" />
-                <img src="oriental-garden-02-min.jpg" alt="Orient-garden" />
-                <img src="indian-garden-09.jpg" alt="India-garden" />
-                <img src="lakes-walk-05-min (1).jpg" alt="Lake-walks" />
+                <img
+                    class="gallery__img gallery__img--hover"
+                    src="rose-garden-02-min.jpg"
+                    alr="rose-garden"
+                />
+                <img
+                    class="gallery__img gallery__img--hover"
+                    src="italian-grotto-06-min (1).jpg"
+                    alt="Italian-garden"
+                />
+                <img
+                    class="gallery__img .gallery__img--hover"
+                    src="chinese-garden-02-min.jpg"
+                    alt="Chinese-garden"
+                />
+                <img
+                    class="gallery__img gallery__img--hover"
+                    src="sunken-garden-01-min.jpg"
+                    alt="Suken-garden"
+                />
+                <img
+                    class="gallery__img gallery__img--hover"
+                    src="border-garden-07-min.jpg"
+                    alt="Border-garden"
+                />
+                <img
+                    class="gallery__img gallery__img--hover"
+                    src="oriental-garden-02-min.jpg"
+                    alt="Orient-garden"
+                />
+                <img
+                    class="gallery__img gallery__img--hover"
+                    src="indian-garden-09.jpg"
+                    alt="India-garden"
+                />
+                <img
+                    class="gallery__img gallery__img--hover"
+                    src="lakes-walk-05-min (1).jpg"
+                    alt="Lake-walks"
+                />
             </div>
         </main>
         <footer class="pageFooter">
