gallery hover text

--- a/gallery.html
+++ b/gallery.html
@@ -49,52 +49,78 @@
         </header>
         <main class="container">
             <div class="gallery">
-                <img
-                    class="gallery__img gallery__img--hover"
-                    src="storybook-garden-03-min.jpg"
-                    alt="storybook-garden"
-                />
-
-                <img
-                    class="gallery__img gallery__img--hover"
-                    src="rose-garden-02-min.jpg"
-                    alr="rose-garden"
-                />
-                <img
-                    class="gallery__img gallery__img--hover"
-                    src="italian-grotto-06-min (1).jpg"
-                    alt="Italian-garden"
-                />
-                <img
-                    class="gallery__img .gallery__img--hover"
-                    src="chinese-garden-02-min.jpg"
-                    alt="Chinese-garden"
-                />
-                <img
-                    class="gallery__img gallery__img--hover"
-                    src="sunken-garden-01-min.jpg"
-                    alt="Suken-garden"
-                />
-                <img
-                    class="gallery__img gallery__img--hover"
-                    src="border-garden-07-min.jpg"
-                    alt="Border-garden"
-                />
-                <img
-                    class="gallery__img gallery__img--hover"
-                    src="oriental-garden-02-min.jpg"
-                    alt="Orient-garden"
-                />
-                <img
-                    class="gallery__img gallery__img--hover"
-                    src="indian-garden-09.jpg"
-                    alt="India-garden"
-                />
-                <img
-                    class="gallery__img gallery__img--hover"
-                    src="lakes-walk-05-min (1).jpg"
-                    alt="Lake-walks"
-                />
+                <div class="gardentitle">
+                    <img
+                        class="gallery__img gallery__img--hover"
+                        src="storybook-garden-03-min.jpg"
+                        alt="storybook-garden"
+                    />
+                    <h2>Storybook Garden</h2>
+                </div>
+                <div class="gardentitle">
+                    <img
+                        class="gallery__img gallery__img--hover"
+                        src="rose-garden-02-min.jpg"
+                        alr="rose-garden"
+                    />
+                    <h2>Rose Garden</h2>
+                </div>
+                <div class="gardentitle">
+                    <img
+                        class="gallery__img gallery__img--hover"
+                        src="italian-grotto-06-min (1).jpg"
+                        alt="Italian-garden"
+                    />
+                    <h2>Italian Grotto</h2>
+                </div>
+                <div class="gardentitle">
+                    <img
+                        class="gallery__img .gallery__img--hover"
+                        src="chinese-garden-02-min.jpg"
+                        alt="Chinese-garden"
+                    />
+                    <h2>Chinese Garden</h2>
+                </div>
+                <div class="gardentitle">
+                    <img
+                        class="gallery__img gallery__img--hover"
+                        src="sunken-garden-01-min.jpg"
+                        alt="Suken-garden"
+                    />
+                    <h2>Suken Garden</h2>
+                </div>
+                <div class="gardentitle">
+                    <img
+                        class="gallery__img gallery__img--hover"
+                        src="border-garden-07-min.jpg"
+                        alt="Border-garden"
+                    />
+                    <h2>Border Garden</h2>
+                </div>
+                <div class="gardentitle">
+                    <img
+                        class="gallery__img gallery__img--hover"
+                        src="oriental-garden-02-min.jpg"
+                        alt="Orient-garden"
+                    />
+                    <h2>Oriental Garden</h2>
+                </div>
+                <div class="gardentitle">
+                    <img
+                        class="gallery__img gallery__img--hover"
+                        src="indian-garden-09.jpg"
+                        alt="India-garden"
+                    />
+                    <h2>Indian Garden</h2>
+                </div>
+                <div class="gardentitle">
+                    <img
+                        class="gallery__img gallery__img--hover"
+                        src="lakes-walk-05-min (1).jpg"
+                        alt="Lake-walks"
+                    />
+                    <h2>Lakes Walk</h2>
+                </div>
             </div>
         </main>
         <footer class="pageFooter">
