added new file paths for images

--- a/contact.html
+++ b/contact.html
@@ -50,7 +50,7 @@
                 A naturally beautiful experience in the heart of Hunter Valley
                 Wine Country.
             </p>
-            <img class="contactimage" src="indian-garden-09.jpg" />
+            <img class="contactimage" src="images\indian-garden-09.jpg" />
         </header>
         <br />
         <main class="main-form">
