--- a/gallery.html
+++ b/gallery.html
@@ -52,7 +52,7 @@
                 <div class="gardentitle">
                     <img
                         class="gallery__img gallery__img--hover"
-                        src="storybook-garden-03-min.jpg"
+                        src="images\storybook-garden-03-min.jpg"
                         alt="storybook-garden"
                     />
                     <h2>Storybook Garden</h2>
@@ -60,7 +60,7 @@
                 <div class="gardentitle">
                     <img
                         class="gallery__img gallery__img--hover"
-                        src="rose-garden-02-min.jpg"
+                        src="images\rose-garden-02-min.jpg"
                         alr="rose-garden"
                     />
                     <h2>Rose Garden</h2>
@@ -68,7 +68,7 @@
                 <div class="gardentitle">
                     <img
                         class="gallery__img gallery__img--hover"
-                        src="italian-grotto-06-min (1).jpg"
+                        src="images\italian-grotto-06-min (1).jpg"
                         alt="Italian-garden"
                     />
                     <h2>Italian Grotto</h2>
@@ -76,7 +76,7 @@
                 <div class="gardentitle">
                     <img
                         class="gallery__img .gallery__img--hover"
-                        src="chinese-garden-02-min.jpg"
+                        src="images\chinese-garden-02-min.jpg"
                         alt="Chinese-garden"
                     />
                     <h2>Chinese Garden</h2>
@@ -84,7 +84,7 @@
                 <div class="gardentitle">
                     <img
                         class="gallery__img gallery__img--hover"
-                        src="sunken-garden-01-min.jpg"
+                        src="images\sunken-garden-01-min.jpg"
                         alt="Suken-garden"
                     />
                     <h2>Suken Garden</h2>
@@ -92,7 +92,7 @@
                 <div class="gardentitle">
                     <img
                         class="gallery__img gallery__img--hover"
-                        src="border-garden-07-min.jpg"
+                        src="images\border-garden-07-min.jpg"
                         alt="Border-garden"
                     />
                     <h2>Border Garden</h2>
@@ -100,7 +100,7 @@
                 <div class="gardentitle">
                     <img
                         class="gallery__img gallery__img--hover"
-                        src="oriental-garden-02-min.jpg"
+                        src="images\oriental-garden-02-min.jpg"
                         alt="Orient-garden"
                     />
                     <h2>Oriental Garden</h2>
@@ -108,7 +108,7 @@
                 <div class="gardentitle">
                     <img
                         class="gallery__img gallery__img--hover"
-                        src="indian-garden-09.jpg"
+                        src="images\indian-garden-09.jpg"
                         alt="India-garden"
                     />
                     <h2>Indian Garden</h2>
@@ -116,7 +116,7 @@
                 <div class="gardentitle">
                     <img
                         class="gallery__img gallery__img--hover"
-                        src="lakes-walk-05-min (1).jpg"
+                        src="images\lakes-walk-05-min (1).jpg"
                         alt="Lake-walks"
                     />
                     <h2>Lakes Walk</h2>
