--- a/home.html
+++ b/home.html
@@ -62,14 +62,14 @@
                 <div class="home-grid__img1">
                     <img
                         class="images"
-                        src="sunken-garden-09.jpg"
+                        src="images\border-garden-03-min.jpg"
                         alt="GardenImage1"
                     />
                 </div>
                 <div class="home-grid__img2">
                     <img
                         class="images"
-                        src="rose-garden-05-min.jpg"
+                        src="images\rose-garden-05-min.jpg"
                         alt="GardenImage2"
                     />
                 </div>
@@ -84,7 +84,7 @@
                 <div class=".home-grid__img3">
                     <img
                         class="images"
-                        src="border-garden-03-min.jpg"
+                        src="images\sunken-garden-01-min.jpg"
                         alt="GardenImage3"
                     />
                 </div>
