--- a/location.html
+++ b/location.html
@@ -56,7 +56,7 @@
                 <div class="home-grid__img1">
                     <img
                         class="images"
-                        src="sunken-garden-02-min-1.jpg"
+                        src="images\sunken-garden-02-min-1.jpg"
                         alt="GardenImage1"
                     />
                 </div>
@@ -81,7 +81,7 @@
                     <img
                         id="Italian"
                         class="images"
-                        src="italian-grotto-06-min.jpg"
+                        src="images\italian-grotto-06-min.jpg"
                         alt="GardenImage3"
                     />
                 </div>
