footer to one line

--- a/contact.html
+++ b/contact.html
@@ -89,8 +89,10 @@
         <br />
         <footer class="pageFooter">
             <div class="pageFooter__content">
-                <p>E:eeid1@woolworths.com.au</p>
-                <p>G:git@github.com:Leid111/TourismProjectLizGarden.git</p>
+                <p>
+                    E:eeid1@woolworths.com.au
+                    G:git@github.com:Leid111/TourismProjectLizGarden.git
+                </p>
             </div>
         </footer>
     </body>
