--- a/gallery.html
+++ b/gallery.html
@@ -125,8 +125,10 @@
         </main>
         <footer class="pageFooter">
             <div class="pageFooter__content">
-                <p>E:eeid1@woolworths.com.au</p>
-                <p>G:git@github.com:Leid111/TourismProjectLizGarden.git</p>
+                <p>
+                    E:eeid1@woolworths.com.au
+                    G:git@github.com:Leid111/TourismProjectLizGarden.git
+                </p>
             </div>
         </footer>
     </body>
